Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanIntObjField.quorum
class Main
    Integer v
    action Main
        v:SetValue(5)
        Test(v)
    end

    action Test(boolean var)
    end
end
